[FIX] Give table__col--text fixed width to prevent layout breaking

--- a/resources/assets/stylesheets/blocks/table.scss
+++ b/resources/assets/stylesheets/blocks/table.scss
@@ -44,6 +44,10 @@
 
 .table__column {
   display: table-cell;
+
+  &.table__column--text {
+    width: 200px;
+  }
 }
 
 .table__head .table__column {
